--- a/app/src/main/res/layout-w1240dp/app_bar_main.xml
+++ b/app/src/main/res/layout-w1240dp/app_bar_main.xml
@@ -10,30 +10,41 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@android:color/white"
         android:theme="@style/Theme.OCCPT.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
             app:popupTheme="@style/Theme.OCCPT.PopupOverlay">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/profile_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_profile_placeholder"
-                app:civ_border_color="@color/white"
-                app:civ_border_width="2dp" />
 
             <ImageView
                 android:id="@+id/toolbar_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:contentDescription="@string/logo_description"
+                android:src="@drawable/logo_home" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/welcome_provider"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/overflow_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:src="@drawable/occpt_app_icon_5"
-                android:contentDescription="@string/logo_description" />
+                android:padding="16dp"
+                android:contentDescription="@string/overflow_menu_description"
+                android:src="@drawable/ic_dots_vertical"
+                app:tint="@android:color/black" />
 
         </androidx.appcompat.widget.Toolbar>
 
