--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -42,12 +42,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:padding="16dp"
                 android:contentDescription="@string/overflow_menu_description"
+                android:padding="16dp"
                 android:src="@drawable/ic_dots_vertical"
                 app:tint="@android:color/black" />
 
         </androidx.appcompat.widget.Toolbar>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="333dp"
+            android:layout_marginStart="12dp"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="@string/welcome_provider" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
